<resources>
    <string name="app_name">MobiMarket</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mobiMarket">MOBI MARKET</string>
    <string name="inputName">Имя пользователя</string>
    <string name="inputPassword">Пароль</string>
    <string name="login">Войти</string>
    <string name="register">Зарегистрироваться</string>
    <string name="mail">Почта</string>
    <string name="registrationText">Регистрация</string>
    <string name="repetePass">Повторите пароль</string>
    <string name="requirments"><![CDATA[Минимальная длина — 8 символов.\n Для надежности пароль должен\n содержать буквы и цифры.]]></string>
    <string name="main">Главная</string>
    <string name="profile">Профиль</string>
    <string name="wallet">Кошелек</string>
    <string name="chats">Чаты</string>
    <string name="userName">user name</string>
    <string name="fov">Понравившиеся</string>
    <string name="myProduct">Мои товары</string>
    <string name="finishRegistration">Закончить регистрацию</string>
    <string name="logout">Выйти</string>
    <string name="pickPhoto">Выбрать фотографию</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="date">00.00.0000</string>
    <string name="addNumber">Добавить номер</string>
    <string name="number">0(000) 000 000</string>
    <string name="addressemail">com.example@gmail.com</string>
    <string name="tectPhone">Введите номер телефона</string>
    <string name="textSms">Мы отправим вам СМС с кодом\n подтверждения</string>
    <string name="editTexPhone">0(000) 000 000</string>
</resources>