<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.EditProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.cardview.widget.CardView
            android:id="@+id/cardProfileImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="80dp"
            app:cardCornerRadius="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

            <ImageView
                android:id="@+id/profileImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"
                android:layout_gravity="center"
                android:src="@drawable/profile" />
        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/pickPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/pickPhoto"
            android:textColor="@color/mainBlue"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardProfileImage" />


        <ImageView
            android:id="@+id/done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:clickable="false"
            android:src="@drawable/done"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/cancel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardProfileInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="41dp"
            android:layout_marginEnd="24dp"
            app:cardCornerRadius="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pickPhoto" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editTextName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="20dp"
                    android:fontFamily="@font/gothampro"
                    android:hint="@string/name"
                    android:textColorHint="@color/grey"
                    tools:ignore="MissingConstraints,TouchTargetSizeCheck"
                    android:background="@android:color/transparent"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey2"
                    android:layout_marginHorizontal="16dp"/>

                <EditText
                    android:id="@+id/editTextSurname"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="@font/gothampro"
                    android:textColorHint="@color/grey"
                    android:hint="@string/surname"
                    tools:ignore="MissingConstraints,TouchTargetSizeCheck"
                    android:background="@android:color/transparent"
                     />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey2"
                    android:layout_marginHorizontal="16dp"/>


                <EditText
                    android:id="@+id/editTextLogin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="20dp"
                    android:textColorHint="@color/grey"
                    android:fontFamily="@font/gothampro"
                    android:hint="@string/userName"
                    tools:ignore="MissingConstraints,TouchTargetSizeCheck"
                    android:background="@android:color/transparent"
                   />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey2"
                    android:layout_marginHorizontal="16dp"/>
                <EditText
                    android:id="@+id/editTextDate"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="20dp"
                    android:textColorHint="@color/grey"
                    android:fontFamily="@font/gothampro"
                    android:hint="@string/date"
                    tools:ignore="MissingConstraints,TouchTargetSizeCheck"
                    android:background="@android:color/transparent"
                    />



            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardNumberAndEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="12dp"
            app:cardCornerRadius="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardProfileInfo">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/addNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/gothamprobold"
                    android:text="@string/addNumber"
                    android:textColor="@color/mainBlue"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toTopOf="@+id/view3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:fontFamily="@font/gothamprobold"
                    android:text="@string/number"
                    android:textColor="@color/grey"
                    app:layout_constraintBottom_toBottomOf="@+id/addNumber"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/addNumber" />

                <View
                    android:id="@+id/view3"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"

                    android:layout_marginHorizontal="16dp"
                    android:background="@color/grey2"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp"
                    android:fontFamily="@font/gothamprobold"
                    android:text="@string/addressemail"
                    android:textColor="@color/black2"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view3" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>