<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.LoginFragment">

    <TextView
        android:id="@+id/registerBarText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrationText"
        android:fontFamily="@font/gothamprobold"
        android:textSize="20sp"
        android:layout_margin="30dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:id="@+id/backIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back"
        app:layout_constraintBottom_toBottomOf="@+id/registerBarText"
        app:layout_constraintEnd_toStartOf="@+id/registerBarText"
        app:layout_constraintHorizontal_bias="0.336"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/registerBarText" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/hidepassword"
        app:layout_constraintBottom_toBottomOf="@+id/registerBarText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.664"
        app:layout_constraintStart_toEndOf="@+id/registerBarText"
        app:layout_constraintTop_toTopOf="@+id/registerBarText" />

    <ImageView
        android:id="@+id/lockIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:src="@drawable/lockicon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerBarText" />

    <TextView
        android:id="@+id/repeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/repetePass"
        android:fontFamily="@font/gothamprobold"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lockIcon" />

    <TextView
        android:id="@+id/requirements"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/requirments"
        android:gravity="center"
        android:fontFamily="@font/gothampro"
        android:textSize="18sp"
        android:lineSpacingExtra="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repeat" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/furtherButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="88dp"
        android:background="@drawable/grey_button"
        android:fontFamily="@font/gothamprobold"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/requirements" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/InputLayoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        android:background="@android:color/transparent"
        android:textColorHint="@color/grey"
        app:boxBackgroundMode="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/furtherButton"

       >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/gothampro"
            android:gravity="center"
            android:inputType="textPassword"
            android:textColor="@color/black2"
            android:textSize="40sp"
            android:text="sdfsdfsd"
            android:letterSpacing="0.2"
            android:textColorHint="@color/grey"/>

    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>